# SysProgTotallyNotTheSolution

./: .cproject  .gitignore  CMakeLists.txt  LICENSE  createObjsFolders.sh
Scanner/debug/: ScannerStart
Scripts/: createObjsFolders.sh  removeOutputFiles.sh  startScanner.sh
